# bracket-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  grammar.js
scripts/: check_quality.sh
src/: grammar.json  lib.rs  main.rs  node-types.json  parser.c
src/tree_sitter/: parser.h
