[package]
name = "bracket-parser"
version = "0.1.0"
edition = "2021"
authors = ["Beret Adam Mańczuk <beret@hipisi.org.pl>"]
description = "A Rust library that detects if positions in text are inside or outside brackets"
license = "MIT"
repository = "https://github.com/berecik/bracket-parser"
documentation = "https://docs.rs/bracket-parser"
keywords = ["parser", "brackets", "tree-sitter", "text-analysis", "syntax"]
categories = ["parsing", "text-processing"]
readme = "README.md"

# Define both library and binary targets
[lib]
name = "bracket_parser"
path = "src/lib.rs"

[[bin]]
name = "show_usage"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25.6"

[build-dependencies]
cc = "1.2.26"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
